# WavEncoder

./: CMakeLists.txt  Wav.cpp  Wav.hpp
